crates/runtime/tests/search/snapshots/integration_models__search__cayenne_memory-s3_vectors-no_text_engine-dataset-text_search_metadata_megascience_vector_search_sql_index_only_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score  FROM vector_search(qs, 'second', answer) order by _score desc, id desc LIMIT 4;"
---
Could not prepare EXPLAIN plan: Query execution failed: code: 'Client specified an invalid argument', message: "Table 'spice.public.qs' does not have an embedding index."
