crates/runtime/tests/search/snapshots/integration_models__search__cayenne_with_zero_results-s3_vectors_fallback-no_text_engine-dataset-basic_megascience_vector_search_sql_basic_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(_score, 3) FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, trunc(vector_search(qs, Utf8("second"), answer)._score,Int64(3))                                                        |
|               |   Sort: vector_search(qs, Utf8("second"), answer)._score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id ASC NULLS LAST, fetch=4                                                                                     |
|               |     Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, trunc(vector_search(qs, Utf8("second"), answer)._score, Int64(3)), vector_search(qs, Utf8("second"), answer)._score |
|               |       TableScan: vector_search(qs, Utf8("second"), answer) projection=[_score, answer, id]                                                                                                                                          |
| physical_plan | ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(vector_search(qs, Utf8("second"), answer)._score,Int64(3))@2 as trunc(vector_search(qs, Utf8("second"), answer)._score,Int64(3))]                                       |
|               |   SortPreservingMergeExec: [_score@3 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                            |
|               |     SortExec: TopK(fetch=4), expr=[_score@3 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                |
|               |       ProjectionExec: expr=[id@0 as id, answer@2 as answer, trunc(_score@1, 3) as trunc(vector_search(qs, Utf8("second"), answer)._score,Int64(3)), _score@1 as _score]                                                             |
|               |         HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, _score@1, answer@2]                                                                                |
|               |           CoalescePartitionsExec                                                                                                                                                                                                    |
|               |             ProjectionExec: expr=[CAST(key@0 AS Int64) as id, 1 - distance@1 as _score]                                                                                                                                             |
|               |               BytesProcessedExec                                                                                                                                                                                                    |
|               |                 RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                |
|               |                   S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                                      |
|               |           RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                      |
|               |             SchemaCastScanExec                                                                                                                                                                                                      |
|               |               FallbackOnZeroResultsScanExec                                                                                                                                                                                         |
|               |                 CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0                                                                                                                                                       |
|               |                   BytesProcessedExec                                                                                                                                                                                                |
|               |                     EmptyExec                                                                                                                                                                                                       |
|               |                                                                                                                                                                                                                                     |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
